# sfd-skin-chemistry

./: .gitignore  Analysis.ipynb  Data Pre-processing.ipynb  README.md  SetBERT Taxonomy Classification.ipynb  pyproject.toml
dataframes/: Main_Dataframe.xlsx  Main_Dataframe.xlsx - Exp1_SnakeSkin.csv  Main_Dataframe.xlsx - Exp2_MinMedia.csv  Main_Dataframe.xlsx - Exp3_DBFI.csv  Main_Dataframe.xlsx - Exp4_SpentMedia_BacGrowth.csv  Main_Dataframe.xlsx - Exp4_SpentMedia_FunGrowth.csv
scripts/: 250113_Main_Script.R  pretrain.py
src/sfd2/: models.py
